micro_ecomm/infra/k8s/microservices/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  ports:
    - port: 5006
      targetPort: 5006
  selector:
    app: notification-service
