micro_ecomm/infra/k8s/microservices/notification-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - http:
      paths:
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 5006
